<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">VisionGo</string>
    <string name="app_subtitle">Navigazione per non vedenti</string>
    <string name="btn_voice">Comando Vocale</string>
    <string name="btn_destination">Inserisci Destinazione</string>
    <string name="btn_favorites">Luoghi Preferiti</string>
    <string name="btn_emergency">Emergenza</string>
    <string name="btn_history">Cronologia</string>
    <string name="desc_voice">Attiva riconoscimento vocale per inserire un comando</string>
    <string name="desc_destination">Apre la schermata per inserire una destinazione manualmente</string>
    <string name="desc_favorites">Apre i luoghi salvati come casa, lavoro e altri preferiti</string>
    <string name="desc_emergency">Chiama il numero di emergenza 112 e invia la posizione</string>
    <string name="desc_history">Mostra la cronologia degli ultimi percorsi effettuati</string>
    <string name="lbl_destination">Inserisci Destinazione</string>
    <string name="hint_destination">Es. Stazione Centrale</string>
    <string name="btn_start_nav">Avvia Navigazione</string>
    <string name="desc_field_dest">Campo di testo per inserire la destinazione</string>
    <string name="desc_start_nav">Avvia la navigazione verso la destinazione inserita</string>
    <string name="nav_active">Navigazione Attiva</string>
    <string name="gps_waiting">GPS: in attesa...</string>
    <string name="btn_repeat">Ripeti Istruzione</string>
    <string name="btn_stop">Ferma Navigazione</string>
    <string name="desc_repeat">Ripete ad alta voce l\'ultima indicazione stradale</string>
    <string name="desc_stop">Ferma la navigazione e torna alla schermata principale</string>
    <string name="lbl_favorites">Luoghi Preferiti</string>
    <string name="btn_go_home">Vai a Casa</string>
    <string name="btn_go_work">Vai al Lavoro</string>
    <string name="desc_go_home">Avvia la navigazione verso casa</string>
    <string name="desc_go_work">Avvia la navigazione verso il luogo di lavoro</string>
    <string name="lbl_login">Accedi a VisionGo</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Nome completo</string>
    <string name="btn_login">Accedi</string>
    <string name="btn_register">Registrati</string>
    <string name="lbl_no_account">Non hai un account?</string>
    <string name="lbl_history">Ultimi Percorsi</string>
    <string name="lbl_no_history">Nessun percorso effettuato</string>
</resources>