<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_black">

    <TextView
        android:id="@+id/txtNavigation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nav_active"
        android:textSize="@dimen/text_heading"
        android:textStyle="bold"
        android:textColor="@color/text_white"
        android:importantForAccessibility="yes"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="50dp"/>

    <TextView
        android:id="@+id/txtDirection"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:text="Acquisizione GPS..."
        android:textSize="30sp"
        android:textColor="@color/nav_green"
        android:gravity="center"
        android:lineSpacingExtra="6dp"
        android:accessibilityLiveRegion="polite"
        android:importantForAccessibility="yes"
        app:layout_constraintTop_toBottomOf="@id/txtNavigation"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="50dp"/>

    <TextView
        android:id="@+id/txtGpsStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gps_waiting"
        android:textSize="@dimen/text_subtitle"
        android:textColor="@color/text_subtitle"
        android:importantForAccessibility="no"
        app:layout_constraintTop_toBottomOf="@id/txtDirection"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/margin_top_medium"/>

    <TextView
        android:id="@+id/txtDistance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="22sp"
        android:textColor="@color/nav_yellow"
        android:gravity="center"
        android:accessibilityLiveRegion="polite"
        app:layout_constraintTop_toBottomOf="@id/txtGpsStatus"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"/>

    <Button
        android:id="@+id/btnRepeat"
        android:layout_width="@dimen/btn_width"
        android:layout_height="@dimen/btn_height_small"
        android:text="@string/btn_repeat"
        android:textSize="20sp"
        android:backgroundTint="@color/btn_blue"
        android:textColor="@color/text_white"
        android:contentDescription="@string/desc_repeat"
        android:focusable="true"
        app:layout_constraintTop_toBottomOf="@id/txtDistance"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="50dp"/>

    <Button
        android:id="@+id/btnStopNav"
        android:layout_width="@dimen/btn_width"
        android:layout_height="@dimen/btn_height_small"
        android:text="@string/btn_stop"
        android:textSize="20sp"
        android:backgroundTint="@color/btn_red"
        android:textColor="@color/text_white"
        android:contentDescription="@string/desc_stop"
        android:focusable="true"
        app:layout_constraintTop_toBottomOf="@id/btnRepeat"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/margin_top_small"/>

</androidx.constraintlayout.widget.ConstraintLayout>