<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_black">

    <TextView
        android:id="@+id/txtLoginTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="@dimen/text_title"
        android:textStyle="bold"
        android:textColor="@color/text_white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="60dp"/>

    <TextView
        android:id="@+id/txtLoginSub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_login"
        android:textSize="@dimen/text_body"
        android:textColor="@color/text_subtitle"
        app:layout_constraintTop_toBottomOf="@id/txtLoginTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="12dp"/>

    <EditText
        android:id="@+id/editEmail"
        android:layout_width="@dimen/btn_width"
        android:layout_height="70dp"
        android:hint="@string/hint_email"
        android:textSize="20sp"
        android:textColor="@color/text_white"
        android:textColorHint="@color/text_hint"
        android:backgroundTint="@color/text_white"
        android:inputType="textEmailAddress"
        android:contentDescription="Inserisci il tuo indirizzo email"
        app:layout_constraintTop_toBottomOf="@id/txtLoginSub"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="60dp"/>

    <EditText
        android:id="@+id/editPassword"
        android:layout_width="@dimen/btn_width"
        android:layout_height="70dp"
        android:hint="@string/hint_password"
        android:textSize="20sp"
        android:textColor="@color/text_white"
        android:textColorHint="@color/text_hint"
        android:backgroundTint="@color/text_white"
        android:inputType="textPassword"
        android:contentDescription="Inserisci la tua password"
        app:layout_constraintTop_toBottomOf="@id/editEmail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/margin_top_medium"/>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="@dimen/btn_width"
        android:layout_height="@dimen/btn_height"
        android:text="@string/btn_login"
        android:textSize="@dimen/text_btn_large"
        android:backgroundTint="@color/btn_blue"
        android:textColor="@color/text_white"
        android:contentDescription="Accedi all'app con email e password"
        app:layout_constraintTop_toBottomOf="@id/editPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/margin_top_medium"/>

    <Button
        android:id="@+id/btnGoRegister"
        android:layout_width="@dimen/btn_width"
        android:layout_height="@dimen/btn_height_small"
        android:text="@string/btn_register"
        android:textSize="20sp"
        android:backgroundTint="@color/btn_green"
        android:textColor="@color/text_white"
        android:contentDescription="Vai alla schermata di registrazione"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="40dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>