<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_dark">

    <TextView
        android:id="@+id/txtDest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_destination"
        android:textSize="@dimen/text_heading"
        android:textColor="@color/text_white"
        android:textStyle="bold"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="50dp"/>

    <EditText
        android:id="@+id/editDestination"
        android:layout_width="@dimen/btn_width"
        android:layout_height="70dp"
        android:hint="@string/hint_destination"
        android:textSize="22sp"
        android:textColor="@color/text_white"
        android:textColorHint="@color/text_hint"
        android:backgroundTint="@color/text_white"
        android:inputType="text"
        android:imeOptions="actionDone"
        android:contentDescription="@string/desc_field_dest"
        app:layout_constraintTop_toBottomOf="@id/txtDest"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="50dp"/>

    <Button
        android:id="@+id/btnVoiceInput"
        android:layout_width="@dimen/btn_width"
        android:layout_height="@dimen/btn_height_small"
        android:text="Di la Destinazione"
        android:textSize="20sp"
        android:backgroundTint="@color/btn_blue"
        android:textColor="@color/text_white"
        android:contentDescription="Attiva il riconoscimento vocale per la destinazione"
        app:layout_constraintTop_toBottomOf="@id/editDestination"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/margin_top_medium"/>

    <Button
        android:id="@+id/btnStartNavigation"
        android:layout_width="@dimen/btn_width"
        android:layout_height="@dimen/btn_height"
        android:text="@string/btn_start_nav"
        android:textSize="@dimen/text_btn_large"
        android:backgroundTint="#00C853"
        android:textColor="@color/text_white"
        android:contentDescription="@string/desc_start_nav"
        android:focusable="true"
        app:layout_constraintTop_toBottomOf="@id/btnVoiceInput"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/margin_top_medium"/>

    <Button
        android:id="@+id/btnBack"
        android:layout_width="@dimen/btn_width"
        android:layout_height="@dimen/btn_height_small"
        android:text="Torna alla Home"
        android:textSize="18sp"
        android:backgroundTint="#424242"
        android:textColor="@color/text_white"
        android:contentDescription="Torna alla schermata principale"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="40dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>