<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_dark">

    <TextView
        android:id="@+id/txtFavTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_favorites"
        android:textSize="@dimen/text_heading"
        android:textStyle="bold"
        android:textColor="@color/text_white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="40dp"/>

    <Button
        android:id="@+id/btnGoHome"
        android:layout_width="@dimen/btn_width"
        android:layout_height="@dimen/btn_height"
        android:text="@string/btn_go_home"
        android:textSize="@dimen/text_btn_medium"
        android:backgroundTint="@color/btn_blue"
        android:textColor="@color/text_white"
        android:contentDescription="@string/desc_go_home"
        app:layout_constraintTop_toBottomOf="@id/txtFavTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/margin_top_medium"/>

    <Button
        android:id="@+id/btnGoWork"
        android:layout_width="@dimen/btn_width"
        android:layout_height="@dimen/btn_height"
        android:text="@string/btn_go_work"
        android:textSize="@dimen/text_btn_medium"
        android:backgroundTint="@color/btn_green"
        android:textColor="@color/text_white"
        android:contentDescription="@string/desc_go_work"
        app:layout_constraintTop_toBottomOf="@id/btnGoHome"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/margin_top_small"/>

    <View
        android:id="@+id/divider"
        android:layout_width="320dp"
        android:layout_height="1dp"
        android:background="@color/text_hint"
        android:importantForAccessibility="no"
        app:layout_constraintTop_toBottomOf="@id/btnGoWork"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/margin_top_medium"/>

    <ListView
        android:id="@+id/listFavorites"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="@dimen/margin_horizontal"
        android:divider="@color/bg_card"
        android:dividerHeight="2dp"
        app:layout_constraintTop_toBottomOf="@id/divider"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="100dp"/>

    <Button
        android:id="@+id/btnAddPlace"
        android:layout_width="@dimen/btn_width"
        android:layout_height="@dimen/btn_height_small"
        android:text="Aggiungi Luogo"
        android:textSize="20sp"
        android:backgroundTint="@color/btn_orange"
        android:textColor="@color/text_white"
        android:contentDescription="Aggiungi un nuovo luogo preferito"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="30dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>